# Touchpad-Emulator

./: Cargo.toml  LICENSE  justfile  readme.md
assets/: index.html  main.js
src/: keyboard.rs  main.rs  touchpad.rs
