[package]
name = "learn_usb_protocal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
bitflags = "2.6.0"
env_logger = "0.11.5"
log = "0.4.22"
num = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing-subscriber = "0.3.18"
usbip = "0.7.1"

[[bin]]
name = "keyboard"
path = "src/keyboard.rs"

[[bin]]
name = "touchpad"
path = "src/touchpad.rs"
